k8s/api.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: gcr.io/project-33aa1bab-53bd-4/api:latest
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: api
    targetPort: 3000
    port: 3000
  selector:
    app: api
---
