k8s/redis.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
  - name: redis
    targetPort: 6379
    port: 6379
  selector:
    app: redis
---
