k8s/web.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: gcr.io/project-33aa1bab-53bd-4/web:prod
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - name: web
    targetPort: 80
    port: 80
  selector:
    app: web
---
